--- a/index.html
+++ b/index.html
@@ -1,136 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <title>Shwet Shiva Printing Services – Home</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- SEO -->
+<title>Professional Printing Services in India | Shwet Shiva Printing</title>
+<meta name="description" content="High-quality printing services for business cards, brochures, banners, labels, packaging and corporate printing. Fast delivery, premium finishing, competitive pricing.">
+<meta name="keywords" content="printing services, business card printing, brochure printing, banner printing, packaging printing, stickers printing, custom printing india">
+<link rel="canonical" href="https://www.shwetshivaprinting.com/">
+
+<!-- Open Graph -->
+<meta property="og:title" content="Professional Printing Services in India | Shwet Shiva Printing">
+<meta property="og:description" content="Premium printing for business cards, brochures, banners, packaging, and more. Trusted by businesses across India.">
+<meta property="og:image" content="https://picsum.photos/1200/630?random=10">
+<meta property="og:type" content="website">
+
+<!-- Tailwind -->
+<script src="https://cdn.tailwindcss.com"></script>
+
+<!-- Animations -->
+<style>
+    .fade-in { animation: fadeIn 1.2s ease-in-out; }
+    @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+    .slide-up { animation: slideUp 0.9s ease-out; }
+    @keyframes slideUp { from { transform:translateY(20px); opacity:0; }
+                         to { transform:translateY(0); opacity:1; } }
+
+    .zoom-hover:hover {
+        transform: scale(1.03);
+        transition: 0.3s ease;
+    }
+
+    .soft-hover:hover {
+        box-shadow: 0 20px 40px rgba(0,0,0,0.15);
+        transition: 0.3s;
+    }
+
+    a, button { transition: all 0.3s ease; }
+</style>
 </head>
 
 <body class="bg-gray-50">
 
-<!-- ================= NAVIGATION ================= -->
-<header class="sticky top-0 z-50 bg-white shadow">
-    <nav class="container mx-auto px-4 py-4">
-        <div class="flex justify-between items-center">
+<!-- ===================================================
+ NAVIGATION
+==================================================== -->
+<header class="sticky top-0 bg-white shadow z-50">
+    <nav class="container mx-auto px-4 py-4 flex justify-between items-center">
 
-            <!-- Logo -->
-            <div class="flex items-center space-x-3">
-                <div class="w-12 h-12 bg-blue-600 rounded-full flex items-center justify-center">
-                    <i class="fas fa-print text-white text-xl"></i>
-                </div>
-                <div>
-                    <h1 class="text-2xl font-bold">Shwet Shiva</h1>
-                    <p class="text-sm text-gray-600">Printing Services</p>
+        <!-- Logo -->
+        <a href="index.html" class="flex items-center space-x-3">
+            <div class="w-12 h-12 bg-blue-600 rounded-full flex items-center justify-center text-white text-xl font-bold">
+                SS
+            </div>
+            <div>
+                <h1 class="text-2xl font-bold">Shwet Shiva</h1>
+                <p class="text-sm text-gray-600 -mt-1">Printing Services</p>
+            </div>
+        </a>
+
+        <!-- Desktop Menu -->
+        <div class="hidden md:flex space-x-8 font-semibold">
+
+            <a href="index.html" class="hover:text-blue-600">Home</a>
+
+            <!-- Products Dropdown -->
+            <div class="relative group cursor-pointer">
+                <span class="hover:text-blue-600">Products</span>
+
+                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-48 p-3 space-y-2">
+                    <a href="business-cards.html" class="block hover:text-blue-600">Business Cards</a>
+                    <a href="brochures.html" class="block hover:text-blue-600">Brochures</a>
+                    <a href="banners.html" class="block hover:text-blue-600">Banners</a>
+                    <a href="packaging.html" class="block hover:text-blue-600">Packaging</a>
+                    <a href="labels.html" class="block hover:text-blue-600">Labels</a>
                 </div>
             </div>
 
-            <!-- Desktop Menu -->
-            <div class="hidden md:flex space-x-8 font-medium">
-                <a href="index.html" class="hover:text-blue-600">Home</a>
+            <a href="services.html" class="hover:text-blue-600">Services</a>
 
-                <div class="relative group">
-                    <button class="hover:text-blue-600">Products</button>
-                    <div class="absolute hidden group-hover:block bg-white shadow-md rounded-lg p-4 w-48">
-                        <a href="business-cards.html" class="block py-1 hover:text-blue-600">Business Cards</a>
-                        <a href="brochures.html" class="block py-1 hover:text-blue-600">Brochures</a>
-                        <a href="banners.html" class="block py-1 hover:text-blue-600">Banners</a>
-                        <a href="packaging.html" class="block py-1 hover:text-blue-600">Packaging</a>
-                        <a href="labels.html" class="block py-1 hover:text-blue-600">Labels</a>
-                    </div>
-                </div>
+            <!-- Company Dropdown -->
+            <div class="relative group cursor-pointer">
+                <span class="hover:text-blue-600">Company</span>
 
-                <a href="services.html" class="hover:text-blue-600">Services</a>
-
-                <div class="relative group">
-                    <button class="hover:text-blue-600">Company</button>
-                    <div class="absolute hidden group-hover:block bg-white shadow-md rounded-lg p-4 w-48">
-                        <a href="about.html" class="block py-1 hover:text-blue-600">About Us</a>
-                        <a href="contact.html" class="block py-1 hover:text-blue-600">Contact</a>
-                    </div>
+                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-40 p-3 space-y-2">
+                    <a href="about.html" class="block hover:text-blue-600">About Us</a>
+                    <a href="contact.html" class="block hover:text-blue-600">Contact</a>
                 </div>
             </div>
-
-            <button id="mobileBtn" class="md:hidden text-3xl">☰</button>
         </div>
 
-        <!-- Mobile Menu -->
-        <div id="mobileMenu" class="hidden md:hidden mt-4">
-            <a href="index.html" class="block py-2">Home</a>
-
-            <details class="py-2">
-                <summary class="cursor-pointer">Products</summary>
-                <div class="pl-4 space-y-1">
-                    <a href="business-cards.html" class="block">Business Cards</a>
-                    <a href="brochures.html" class="block">Brochures</a>
-                    <a href="banners.html" class="block">Banners</a>
-                    <a href="packaging.html" class="block">Packaging</a>
-                    <a href="labels.html" class="block">Labels</a>
-                </div>
-            </details>
-
-            <a href="services.html" class="block py-2">Services</a>
-            <a href="about.html" class="block py-2">About Us</a>
-            <a href="contact.html" class="block py-2">Contact</a>
-        </div>
+        <!-- Mobile Menu Button -->
+        <button id="mobileBtn" class="md:hidden text-3xl">&#9776;</button>
     </nav>
+
+    <!-- Mobile Menu -->
+    <div id="mobileMenu" class="hidden md:hidden bg-white shadow px-4 pb-4">
+        <a href="index.html" class="block py-2">Home</a>
+
+        <details class="py-2">
+            <summary class="cursor-pointer font-medium">Products</summary>
+            <div class="pl-4 space-y-1">
+                <a href="business-cards.html" class="block">Business Cards</a>
+                <a href="brochures.html" class="block">Brochures</a>
+                <a href="banners.html" class="block">Banners</a>
+                <a href="packaging.html" class="block">Packaging</a>
+                <a href="labels.html" class="block">Labels</a>
+            </div>
+        </details>
+
+        <a href="services.html" class="block py-2">Services</a>
+
+        <details class="py-2">
+            <summary class="cursor-pointer font-medium">Company</summary>
+            <div class="pl-4 space-y-1">
+                <a href="about.html">About Us</a>
+                <a href="contact.html">Contact</a>
+            </div>
+        </details>
+    </div>
 </header>
 
-<!-- ================= HERO ================= -->
-<section class="bg-blue-600 text-white py-24 text-center">
-    <h2 class="text-5xl font-extrabold">Premium Printing For Your Business</h2>
-    <p class="mt-4 text-xl text-blue-100 max-w-3xl mx-auto">
-        High-quality printing services designed to make your brand look professional.
-    </p>
-    <div class="mt-6 flex justify-center space-x-4">
-        <a href="products.html" class="bg-white text-blue-600 px-8 py-3 rounded-lg font-bold">Explore Products</a>
-        <a href="contact.html" class="border border-white px-8 py-3 rounded-lg font-bold">Get Quote</a>
+<script>
+document.getElementById("mobileBtn").onclick = () => {
+    document.getElementById("mobileMenu").classList.toggle("hidden");
+};
+</script>
+
+<!-- ===================================================
+ HERO SECTION
+==================================================== -->
+<section class="relative fade-in">
+    <img src="https://picsum.photos/1920/600?random=1"
+         class="w-full h-[420px] object-cover brightness-75">
+
+    <div class="absolute top-0 left-0 w-full h-full flex flex-col justify-center items-center text-white text-center px-6">
+        <h2 class="text-5xl font-extrabold drop-shadow-lg slide-up">
+            Premium Printing Services
+        </h2>
+        <p class="mt-4 text-lg max-w-2xl slide-up">
+            High-quality printing for business cards, brochures, banners, packaging and all your branding needs.
+        </p>
+
+        <a href="services.html"
+           class="mt-6 bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-lg text-lg font-semibold shadow-lg slide-up">
+           Explore Services
+        </a>
     </div>
 </section>
 
-<!-- ================= CATEGORY GRID ================= -->
-<section class="py-16 container mx-auto px-4">
-    <h3 class="text-3xl font-bold text-center">Popular Categories</h3>
+<!-- ===================================================
+ FEATURED PRODUCTS
+==================================================== -->
+<section class="container mx-auto px-6 py-16">
+    <h3 class="text-3xl font-bold text-center fade-in">Our Top Products</h3>
+    <p class="text-center text-gray-600 mt-3 mb-10 fade-in">
+        Best-selling print products loved by businesses across India.
+    </p>
 
-    <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mt-10">
-        <div class="p-6 bg-white shadow rounded-lg text-center hover:-translate-y-1 transition">
-            <i class="fas fa-id-card text-4xl text-blue-600"></i>
-            <p class="mt-4 font-medium">Business Cards</p>
+    <div class="grid md:grid-cols-3 gap-10">
+
+        <!-- Card 1 -->
+        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up cursor-pointer">
+            <img src="https://picsum.photos/400/260?random=2"
+                 class="rounded-lg mb-4 zoom-hover">
+            <h4 class="text-xl font-semibold">Business Cards</h4>
+            <p class="text-gray-600 mt-2">Glossy, matte, textured & custom designs.</p>
         </div>
 
-        <div class="p-6 bg-white shadow rounded-lg text-center hover:-translate-y-1 transition">
-            <i class="far fa-newspaper text-4xl text-blue-600"></i>
-            <p class="mt-4 font-medium">Brochures</p>
+        <!-- Card 2 -->
+        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up cursor-pointer">
+            <img src="https://picsum.photos/400/260?random=3"
+                 class="rounded-lg mb-4 zoom-hover">
+            <h4 class="text-xl font-semibold">Brochures</h4>
+            <p class="text-gray-600 mt-2">Tri-fold, bi-fold, Z-fold brochures & flyers.</p>
         </div>
 
-        <div class="p-6 bg-white shadow rounded-lg text-center hover:-translate-y-1 transition">
-            <i class="fas fa-flag text-4xl text-blue-600"></i>
-            <p class="mt-4 font-medium">Banners</p>
+        <!-- Card 3 -->
+        <div class="bg-white rounded-xl shadow p-5 soft-hover slide-up cursor-pointer">
+            <img src="https://picsum.photos/400/260?random=4"
+                 class="rounded-lg mb-4 zoom-hover">
+            <h4 class="text-xl font-semibold">Packaging & Labels</h4>
+            <p class="text-gray-600 mt-2">Custom packaging boxes & stickers.</p>
         </div>
 
-        <div class="p-6 bg-white shadow rounded-lg text-center hover:-translate-y-1 transition">
-            <i class="fas fa-box text-4xl text-blue-600"></i>
-            <p class="mt-4 font-medium">Packaging</p>
-        </div>
     </div>
 </section>
 
-<!-- ================= CTA ================= -->
-<section class="py-20 bg-gray-900 text-white text-center">
-    <h3 class="text-4xl font-bold">Need a Custom Printing Solution?</h3>
-    <p class="mt-4 max-w-2xl mx-auto text-gray-300">
-        Contact us for bulk orders, custom designs, and special print sizes.
-    </p>
+<!-- ===================================================
+ CTA STRIP
+==================================================== -->
+<section class="bg-blue-600 text-white py-14 text-center slide-up">
+    <h3 class="text-3xl font-bold">Need Custom Printing?</h3>
+    <p class="mt-3 text-lg">Share your requirement — we’ll get back within 24 hours!</p>
+
     <a href="contact.html"
-       class="mt-6 inline-block px-10 py-4 bg-blue-600 rounded-lg font-bold hover:bg-blue-700">
+       class="mt-6 inline-block bg-white text-blue-700 px-8 py-3 rounded-lg font-bold shadow-md hover:bg-gray-200">
        Contact Us
     </a>
 </section>
 
-<script>
-document.getElementById("mobileBtn").onclick = function() {
-    document.getElementById("mobileMenu").classList.toggle("hidden");
-};
-</script>
+<!-- ===================================================
+ FOOTER
+==================================================== -->
+<footer class="bg-gray-900 text-gray-300 py-10">
+    <div class="container mx-auto px-6 grid md:grid-cols-3 gap-10">
+
+        <div>
+            <h4 class="text-xl font-bold mb-3">Shwet Shiva Printing</h4>
+            <p>Premium printing services with fast delivery & top quality.</p>
+        </div>
+
+        <div>
+            <h4 class="text-xl font-bold mb-3">Products</h4>
+            <ul class="space-y-1">
+                <li><a href="business-cards.html" class="hover:text-white">Business Cards</a></li>
+                <li><a href="brochures.html" class="hover:text-white">Brochures</a></li>
+                <li><a href="banners.html" class="hover:text-white">Banners</a></li>
+                <li><a href="packaging.html" class="hover:text-white">Packaging</a></li>
+                <li><a href="labels.html" class="hover:text-white">Labels</a></li>
+            </ul>
+        </div>
+
+        <div>
+            <h4 class="text-xl font-bold mb-3">Contact</h4>
+            <p>Email: support@shwetshivaprinting.com</p>
+            <p>Phone: +91 98765 43210</p>
+        </div>
+
+    </div>
+</footer>
 
 </body>
 </html>
