--- a/banners.html
+++ b/banners.html
@@ -213,8 +213,8 @@ document.getElementById("mobileBtn").onclick = () => {
 
         <div>
             <h4 class="text-xl font-bold mb-3">Contact</h4>
-            <p>Email: support@shwetshivaprinting.com</p>
-            <p>Phone: +91 98765 43210</p>
+            <p>Email: infoshwetshivaprinting@gmail.com</p>
+            <p>Phone: +91 80872 20081</p>
         </div>
 
     </div>
