--- a/services.html
+++ b/services.html
@@ -195,6 +195,9 @@ document.getElementById("mobileBtn").onclick = () => {
                 <li><a href="banners.html" class="hover:text-white">Banners</a></li>
                 <li><a href="packaging.html" class="hover:text-white">Packaging</a></li>
                 <li><a href="labels.html" class="hover:text-white">Labels</a></li>
+              <li><a href="wedding-cards.html" class="hover:text-white">Wedding Cards</a></li>
+                <li><a href="invitation-cards.html" class="hover:text-white">Invitation Cards</a></li>
+                <li><a href="office-binding.html" class="hover:text-white">Office Binding</a></li>
             </ul>
         </div>
 
