--- a/business-cards.html
+++ b/business-cards.html
@@ -71,6 +71,10 @@
                     <a href="banners.html" class="block hover:text-blue-600">Banners</a>
                     <a href="packaging.html" class="block hover:text-blue-600">Packaging</a>
                     <a href="labels.html" class="block hover:text-blue-600">Labels</a>
+                     <a href="wedding-cards.html" class="block hover:text-blue-600">Wedding Cards</a>
+                    <a href="invitation-cards.html" class="block font-semibold text-blue-600">Invitation Cards</a>
+                    <a href="office-binding.html" class="block hover:text-blue-600">Office Binding</a>
+                
                 </div>
             </div>
 
