--- a/about.html
+++ b/about.html
@@ -57,17 +57,18 @@
 
             <a href="index.html" class="hover:text-blue-600">Home</a>
 
-            <div class="relative group cursor-pointer">
+             <div class="relative group cursor-pointer">
                 <span class="text-blue-600">Products</span>
-                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-48 p-3 space-y-2">
+                <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg w-56 p-3 space-y-2">
                     <a href="business-cards.html" class="block hover:text-blue-600">Business Cards</a>
                     <a href="brochures.html" class="block hover:text-blue-600">Brochures</a>
                     <a href="banners.html" class="block hover:text-blue-600">Banners</a>
                     <a href="packaging.html" class="block hover:text-blue-600">Packaging</a>
                     <a href="labels.html" class="block hover:text-blue-600">Labels</a>
-                     <a href="wedding-cards.html" class="block hover:text-blue-600">Wedding Cards</a>
-                     <a href="invitation-cards.html" class="block hover:text-blue-600">Invitation Cards</a>
-                     <a href="office-binding.html" class="block font-semibold text-blue-600">Office Binding</a>
+                    <hr>
+                    <a href="wedding-cards.html" class="block font-semibold text-blue-600">Wedding Cards</a>
+                    <a href="invitation-cards.html" class="block hover:text-blue-600">Invitation Cards</a>
+                    <a href="office-binding.html" class="block hover:text-blue-600">Office Binding</a>
                 </div>
             </div>
 
